skins/PageForms.css
/**
 * The main CSS file for the Page Forms extension.
 */

/* Override "width: 100%" setting in standard MediaWiki skins */
textarea.createboxInput {
/*	width: auto;*/
}
textarea.mandatoryField {
	width: auto;
}

#loadingMask {
	position: absolute;
	z-index: 100;
}

/* Used in 'create template' page */
.fieldBox {
	border: 1px black solid;
	background: #dddddd;
	padding: 10px 20px 10px 10px;
	margin: 0 20px 20px 20px;
	position: relative;
}

/* Used in form pages */
table.formtable {
}

table.formtable th {
	text-align: left;
	vertical-align: top;
}
/* another possible layout */
table.formtable2 {
	width: 100%;
	margin: 5px 0 0;
	padding: 0.3em 0.2em 0.2em 0.2em;
	background: transparent;
	border-collapse: collapse;
}
table.formtable2 th, table.formtable2 td {
	vertical-align: top;
}
/* this makes sure that in long lists with checkboxes the checkbox and the
corresponding label are not torn apart by a line break */
span.checkboxSpan {
	/* 'nowrap' doesn't work in IE, unfortunately */
	/* white-space: nowrap; */
	float: left;
	padding-right: 9px;
}
/* the "remove" and "add another" buttons used for multiple templates */
input.remove, input.addanother {
}
/* this selects text and dropdown list inputs that have been set to
mandatory */
input.mandatoryField, select.mandatoryField {
	/* (suggested formatting) */
	/* border: 1px #d72227 solid; */
}
/* a span around radiobuttons and checkboxes that are set to mandatory,
since some browsers don't support formatting of these elements, and a
span around a set of them looks nicer anyway */
span.mandatoryFieldsSpan {
	/* (suggested formatting) */
	/* border: 1px #d72227 solid;
	padding: 4px; */
}

/** INPUT FIELD STYLE */

/* --- Simple Upload --- */
#pfForm span.simpleUploadInterface {
	display: block;
	margin: 10px 0;
}

#pfForm span.simpleUploadInterface > label {
	margin-bottom: 0;
}

#pfForm div.simpleupload_prv {
	margin-bottom: 10px;
}

#pfForm div.simpleupload_prv > img {
	max-width: 350px;
	max-height: 150px;
}

/* === Simple Upload === */

#pfForm .createboxInput,
#pfForm .mandatoryField,
#pfForm textarea {
	max-width: 100%;
	margin-left: 0;
	border-radius: 3px;
	border: 1px solid #BBB;
	padding: 4px 8px;
	display: inline-block;
}

#pfForm input[readonly] {
    background: #EEE;
}

#pfForm .select2-container {
    border: none;
    padding: 0;
}
#pfForm textarea,
form input.formInput,
#pfForm input.yearInput,
#pfForm input.dayInput,
#pfForm input.hoursInput,
#pfForm input.minutesInput,
#pfForm input.secondsInput {
    border-radius: 3px;
    border: 1px solid #BBB;
    padding: 4px 8px;
}

/* The dropdowns need slightly different settings. */
#pfForm select.monthInput,
#pfForm select.ampmInput {
    border-radius: 3px;
    border: 1px solid #BBB;
    padding: 3px 8px;
}

#pfForm select,
#pfForm input[type="checkbox"] {
    max-width: 100%;
    width: auto !important;
}

#pfForm label.checkboxLabel {
	display: inline-block;
}

body.ltr #pfForm label.checkboxLabel {
	margin-right: 20px;
}

body.rtl #pfForm label.checkboxLabel {
	margin-left: 20px;
}

#pfForm label.radioButtonItem {
	display: inline-block;
}

body.ltr #pfForm label.radioButtonItem {
	margin-right: 20px;
}

body.rtl #pfForm label.radioButtonItem {
	margin-left: 20px;
}

/* Select2 inputs */
#pfForm .select2-container {
    width: auto;
}
.select2-choices,
.select2-choice {
    border-radius: 3px 3px 0 0;
    border: 1px solid #BBB;
    min-width: 260px;
    max-width: 100%;
}
.select2-choice {
    /*width: 412px !important;*/
}

.formtable textarea {
    /*width: 422px !important;*/
}

/** /INPUT FIELD STYLE */

/* Override Select2 Style */
.select2-drop-active {
    border: 1px solid #999;
}
.select2-container-multi .select2-choices {
    padding: 2px 0;
}

.select2-container-multi .select2-choices .select2-search-choice {
    padding: 4px 5px 4px 18px;
}

.select2-container .select2-choice .select2-arrow {
    border-radius: 0;
}

.formInput .select2-arrow {
	visibility: hidden;
}

.select2-container .select2-choice > .select2-chosen {
    color: #000;
}

div.infoMessage {
	border: 1px solid #777777;
	padding: 12px;
	margin: 25px;
	width: auto;
	background: #eeeeee;
}

div.errorMessage {
	color: red;
	margin: 1px 0 4px 0;
}
.inputError {
	background: #FCEEEE;
}

input.modifiedInput {
	background: #FFDDE5;
}

div.mainForms {
	font-size: large;
}

div.otherForms {
	font-size: small;
}

.multipleTemplateInstance {
	background-color: #eaecf0;
	border: 1px solid #a2a9b1;
	padding: 5px;
	margin: 15px 0 15px 0;
	border-radius: 3px;
	position: relative;
}

.multipleTemplateInstance.sortable-chosen {
	background-color: #b5b5b5;
}

.multipleTemplateInstance table {
	width: 100%;
	padding: 0;
	margin: 0;
	color: inherit;
	background-color: inherit;
}

a.addAboveButton {
	display: block;
	background: center / contain no-repeat #000 url('PF_add_above.svg');
	background-size: 14px;
}

a.removeButton {
	display: block;
	background: center / contain no-repeat #000 url('PF_remove.svg');
	background-size: 9px;
}

.fieldBox .instanceRemove a.removeButton,
.fieldBox .instanceAddAbove a.addAboveButton,
.multipleTemplateWrapper .instanceRemove a.removeButton,
.multipleTemplateWrapper .instanceAddAbove a.addAboveButton {
	width: 21px;
	height: 21px;
	cursor: pointer;
	border-radius: 100%;
	opacity: 0.90;
	transition: 0.1s;
}

td.instanceRearranger {
	cursor: move;
	background-image: url(rearrangeDots.png);
	background-repeat: repeat;
	width: 8px;
}
td.instanceMain {
	padding-left: 7px;
}
td.instanceAddAbove, td.instanceRemove {
	padding: 0;
	width: 34px;
	overflow: visible;
	position: absolute;
	opacity: 0;
	transition: opacity 0.25s;
}

td.instanceAddAbove {
	right:30px;
	top: -11px;
}

td.instanceRemove {
	right:4px;
	top: -11px;
}

.fieldBox:hover .instanceRemove,
.fieldBox:hover .instanceAddAbove,
.multipleTemplateInstance:hover .instanceRemove,
.multipleTemplateInstance:hover .instanceAddAbove {
	opacity:1;
}

.fieldBox .instanceAddAbove a:hover,
.fieldBox .instanceAddAbove a:active,
.fieldBox .instanceAddAbove a:focus,
.fieldBox .instanceRemove a:hover,
.fieldBox .instanceRemove a:active,
.fieldBox .instanceRemove a:focus,
.multipleTemplateWrapper .instanceAddAbove a:hover,
.multipleTemplateWrapper .instanceAddAbove a:active,
.multipleTemplateWrapper .instanceAddAbove a:focus,
.multipleTemplateWrapper .instanceRemove a:hover,
.multipleTemplateWrapper .instanceRemove a:active,
.multipleTemplateWrapper .instanceRemove a:focus {
	opacity: 1;
	box-shadow: none !important;
	outline: none;
}

.autoGrow {
	overflow: hidden;
	height: auto;
/*	width: 326px;*/
}

/* Override some jQuery UI settings */
.ui-button { margin-left: -1px; }
.ui-button-icon-only .ui-button-text { padding: 0.35em; }
button.ui-button-icon-only {
	width: 1.7em;
	height: 1.5em;
	vertical-align: bottom;
	margin-top: 0.2em;
} /* button elements seem to need a little more width */
/* Override CSS from Header Tabs extension, if tabs are used in the form */
input.pfComboBoxActual {
	border: 1px solid #a6a6a6;
}

.pfTokensGhost {
	color: #777;
	background-color: #f7f7f7 !important;
	border: 1px solid #ddd !important;
}

/**
 * The box-sizing in the DateTimeInputWidget is incorrectly set to
 * "border-box" for MW versions before 1.38, which leads to too-narrow inputs.
 */
.mw-widgets-datetime-dateTimeInputWidget-field {
	box-sizing: content-box !important;
}

/* The standard MediaWiki editOptions class lacks a top border. */
div.editOptions {
	border: 1px solid #c8ccd1;
}

span#wpMinoredit {
	margin-right: 13px;
}
span#wpWatchthis {
	margin-right: 13px;
}

/* Style for touch-screen devices */

@media (hover: none), (pointer: none), (pointer: coarse) {
	td.instanceAddAbove,
	td.instanceRemove {
		opacity:1;
		position: initial;
	}

	td.instanceAddAbove {
		width: 42px;
	}

	.fieldBox .instanceRemove a.removeButton,
	.fieldBox .instanceAddAbove a.addAboveButton,
	.multipleTemplateWrapper .instanceRemove a.removeButton,
	.multipleTemplateWrapper .instanceAddAbove a.addAboveButton {
		background-size: 21px;
		width: 30px;
		height: 30px;
	}

	.fieldBox .instanceRemove a.removeButton,
	.multipleTemplateWrapper .instanceRemove a.removeButton {
		background-size: 14px;
	}
}

